# systerm

./: .env.template  .gitignore  AGENTS.md  README.md  pyproject.toml
.agents/plans/: agent-harness-plan.md
.agents/tools/shell/: tool.toml
.systerm/: config.toml  model.toml
src/systerm/: __init__.py  agent_loop.py  agents.py  cli.py  config.py  daemon.py  daemon_client.py  providers.py  storage.py  tools.py  tui.py
tests/: test_agent_loop.py  test_agents.py  test_cli.py  test_config.py  test_daemon.py  test_daemon_client.py  test_providers.py  test_storage.py  test_tools.py  test_tui.py
