[project]
name = "systerm"
version = "0.1.0"
description = "Local-first general agent harness"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiosqlite>=0.20.0",
    "fastapi>=0.115.0",
    "httpx>=0.27.0",
    "pydantic>=2.7.0",
    "python-dotenv>=1.0.1",
    "textual>=0.89.0",
    "typer>=0.12.3",
    "uvicorn>=0.30.0",
    "websockets>=14.0",
]

[project.scripts]
systerm = "systerm.cli:app"

[dependency-groups]
dev = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
